--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 8000
-MONGODB_URL = mongodb+srv://saif_edumix:Edumix7@clusterhms.a1qn2hc.mongodb.net/HMS
+MONGODB_URL = "mongodb+srv://akilk8515_db_user:admin123@hms.zqo9a7t.mongodb.net/HMS"
 JWT_SECRET = "Edumix@#005$%!"
