--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": "22.x"
+  },
   "license": "ISC",
   "type": "module",
   "dependencies": {
